<resources>
    <string name="app_name">FitProject</string>
    <string name="registerLabel">Registration</string>
    <string name="loginlabel">Login</string>
    <string name="usernameLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="helloLabel">Hello  </string>
    <string name="startWeightLabel">Your start weight:  </string>
    <string name="startBMI">Your start BMI:  </string>
    <string name="actualWeightLabel">Your actual weight:  </string>
    <string name="actualBMI">Your actual BMI:  </string>
    <string name="differenceWeight">Difference weight:  </string>
    <string name="differenceBMI">Difference BMI: </string>
    <string name="menuSettings">Settings</string>
    <string name="toList">TO LIST</string>
    <string name="logout">LOGOUT</string>
    <string name="oldPasswordLabel">Actual password</string>
    <string name="newPasswordLabel">New password</string>
    <string name="repeatNewPasswordLabel">Repeat new password</string>
    <string name="changePasswordLabel">Change Password</string>
    <string name="passwordChanged">Password Changed !</string>
    <string name="createAccount">Create new account</string>
    <string name="yourWeight">Your weight</string>
    <string name="yourHeight">Your height</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="create">Create account</string>
    <string name="weight">Weight: </string>
    <string name="bmi">BMI: </string>
    <string name="date">Date: </string>
    <string name="addNew">Add history</string>
    <string name="createNewHistory">Create new fit history: </string>
    <string name="actualWeight">Actual weight (kg)</string>
    <string name="addPhoto">Add photo</string>
    <string name="lossWeight">You should lose weight!</string>
    <string name="gainWeight">You should gain weight!</string>
    <string name="correctWeight">Your weight is correct!</string>



</resources>
