<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.m.fitproject.RegisterActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:textSize="20dp"
        android:text="@string/createAccount"
        android:textAlignment="center"
        android:layout_marginBottom="80px"
        android:layout_weight="0.03" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:hint="@string/usernameLabel"
        android:gravity="center"
        android:ellipsize="start"
        android:ems="10"
        android:id="@+id/accountUsername"
        android:layout_marginBottom="20px"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/passwordLabel"
        android:gravity="center"
        android:ellipsize="start"
        android:ems="10"
        android:id="@+id/accountPassword"
        android:layout_marginBottom="20px"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/repeatPassword"
        android:gravity="center"
        android:ellipsize="start"
        android:ems="10"
        android:id="@+id/accountPasswordRepeat"
        android:layout_marginBottom="20px"/>

    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:inputType="textPassword"
    android:hint="@string/yourWeight"
    android:gravity="center"
    android:ellipsize="start"
    android:ems="10"
    android:id="@+id/accountWeight"
    android:layout_marginBottom="20px"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/yourHeight"
        android:gravity="center"
        android:ellipsize="start"
        android:ems="10"
        android:id="@+id/accountHeight"
        android:layout_marginBottom="20px"/>

    <Button
        android:text="@string/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton" />




</LinearLayout>
