<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.m.fitproject.HistoryDetailsActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/dateText"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:textSize="20dp"
        android:text="@string/date"
        android:textAlignment="center"
        android:layout_marginBottom="80px"
        android:layout_weight="0.03" />
    <TextView
        android:id="@+id/wageText"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:textSize="15dp"
        android:text="@string/weight"
        android:textAlignment="center"
        android:layout_marginBottom="20px"
        android:layout_weight="0.03" />
    <TextView
        android:id="@+id/BMIText"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:textSize="15dp"
        android:text="@string/bmi"
        android:textAlignment="center"
        android:layout_marginBottom="20px"
        android:layout_weight="0.03" />
    <TextView
        android:id="@+id/weightDifferenceText"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:textSize="15dp"
        android:text="@string/differenceWeight"
        android:textAlignment="center"
        android:layout_marginBottom="20px"
        android:layout_weight="0.03" />
    <TextView
        android:id="@+id/BMIDifferenceText"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:textSize="15dp"
        android:text="@string/differenceBMI"
        android:textAlignment="center"
        android:layout_marginBottom="2px"
        android:layout_weight="0.03" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="328dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/historyImage" />

</LinearLayout>
