<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.m.fitproject.AddNewHistoryItemActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:textSize="20dp"
        android:text="@string/createNewHistory"
        android:textAlignment="center"
        android:layout_marginBottom="40px"
        android:layout_weight="0.19" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:hint="@string/actualWeight"
        android:gravity="center"
        android:ellipsize="start"
        android:ems="10"
        android:id="@+id/actualWeight"
        android:layout_marginBottom="20px"/>

    <Button
        android:text="@string/addPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addPhoto"
        android:layout_marginBottom="60px"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="222dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageView"
        android:layout_marginBottom="60px"/>
    <Button
        android:text="@string/addNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addHistory" />


</LinearLayout>
